--- a/background.Rmd
+++ b/background.Rmd
@@ -71,6 +71,7 @@ The variable `criminal_history` is coded as a value 1--6, with 1 including a def
 The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4. Two additional variables, `base_chapter2_adjustments` and `base_chapter2_3_adjustments`, have to do with the derivation of `all_adjustments`, but you can ignore these for the purposes of this case study.
 
 Apart from `criminal_history` and `all_adjustments`, there are several variables related to identity of defendants: 
+
 * `age`, which refers to a defendant's age in years.
 * `sex`, which has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". FINISH EXPLAINING HERE.
 * `educ`, which refers to a defendant's educational attainment which consists of 4 levels (1 refers to a defendant having less than high school graduation, 3 refers to a high school graduate, 5 means having some college, and 6 means college graduate), and 
@@ -78,7 +79,17 @@ Apart from `criminal_history` and `all_adjustments`, there are several variables
 
 A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
 
+<!-- **To add**
+
+- Add how sex was defined (sex is defined in pre-sentencing report that comes out of the investigation done by the probation office. This goes to the attorneys and also comes out of an interview with the individual. It should be noted that there are only two categories, so it is likely that there might be only two options possible). See Background section or link to official report for more information.
+- Discuss how a binary variable will not reflect sentenced individuals gender identity and excludes several groups. It is also limiting in nature.
+- Discuss difference between sex and gender
+- Discuss who has defined this variable and why this is problematic
+- Discuss the limitations and how this affects the analysis and inferences we can make.
+- Update sex label with more appropriate label based on Background research. -->
+
 The nine other variables in the dataset refer to information about the court cases themselves: 
+
 * `year`, which describes the year in which the court case took place, 
 * `sentence_length`, the length prescribed to a defendant in months,
 * `guilty_plea`, where 0 means the defendant did not plead guilty and 1 means the defendant did plead guilty, <!-- check this! -->
